--- a/README
+++ b/README
@@ -1,45 +1,37 @@
 NAME
-    Cog - The great new Cog!
+    Cog - The Cog Information Application Framework
 
 SYNOPSIS
-        use Cog;
+        > cd content/dir
+        > cog init
+        > cog make
+        > cog start
+
+STATUS
+    This software is pre-alpha. Don't use it for anything serious yet.
 
 DESCRIPTION
-    Cog is your information management being.
+    Cog lets you turn any directory on your computer into an interactive
+    application, like a website or a wiki.
+
+    This module installs a command line utility called "cog". This command
+    can be used to create and update your application.
+
+DOCUMENTATION
+    See Cog::Manual for more information.
+
+KUDOS
+    Many thanks to the good people of Strategic Data in Melbourne Victoria
+    Australia, for supporting me and this project. \o/
 
 AUTHOR
-    Ingy döt Net, "<ingy at cpan.org>"
+    Ingy döt Net <ingy@cpan.org>
 
-BUGS
-    Please report any bugs or feature requests to "bug-cog at rt.cpan.org",
-    or through the web interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Cog>. I will be
-    notified, and then you'll automatically be notified of progress on your
-    bug as I make changes.
-
-SUPPORT
-    You can find documentation for this module with the perldoc command.
-
-        perldoc Cog
-
-    You can also look for information at:
-
-    * AnnoCPAN: Annotated CPAN documentation
-        <http://annocpan.org/dist/Cog>
-
-    * CPAN Ratings
-        <http://cpanratings.perl.org/d/Cog>
-
-    * RT: CPAN's request tracker
-        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=Cog>
-
-    * Search CPAN
-        <http://search.cpan.org/dist/Cog>
-
-ACKNOWLEDGEMENTS
-COPYRIGHT & LICENSE
-    Copyright 2006 Ingy döt Net, all rights reserved.
+COPYRIGHT
+    Copyright (c) 2010. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
+
+    See http://www.perl.com/perl/misc/Artistic.html
 
