--- a/README
+++ b/README
@@ -8,7 +8,7 @@ SYNOPSIS
         > cog start
 
 STATUS
-    This software is pre-alpha. Don't use it for anything serious yet.
+    This software is pre-alpha. Don't use it yet.
 
 DESCRIPTION
     Cog lets you turn any directory on your computer into an interactive
