--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 ---
+version: 0.06
+date:    
+changes:
+- Add missing prereqs
+- Tons of work since last release
+- Release for OSDC.tw
+---
 version: 0.05
 date:    Thu Dec 23 00:23:17 EST 2010
 changes:
