--- a/README
+++ b/README
@@ -27,8 +27,8 @@ KUDOS
 AUTHOR
     Ingy döt Net <ingy@cpan.org>
 
-COPYRIGHT
-    Copyright (c) 2010. Ingy döt Net.
+COPYRIGHT AND LICENSE
+    Copyright (c) 2010, 2011. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
