Import of INGY/Cog-0.07 from CPAN.
gitpan-cpan-distribution: Cog
gitpan-cpan-version:      0.07
gitpan-cpan-path:         INGY/Cog-0.07.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.07
+date:    
+changes:
+- Lots of changes and refactoring.
+- Releasing now mostly to index Cog.pm to the Cog dist
+---
 version: 0.06
 date:    
 changes:
